[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/New_Assets/lever_right.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/GameUI.gd" type="Script" id=2]
[ext_resource path="res://src/options/options_menu_example.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/theme.tres" type="Theme" id=4]

[node name="GameUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.15
anchor_bottom = 0.1
grow_horizontal = 2
grow_vertical = 2
value = 100.0
percent_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.75
anchor_top = 0.05
anchor_right = 0.75
anchor_bottom = 0.05
margin_right = 196.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 68.0
margin_top = 25.0
margin_right = 76.0
margin_bottom = 39.0
text = "0"
align = 1
valign = 1

[node name="Pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="Pause"]
anchor_left = 0.4
anchor_top = 0.1
anchor_right = 0.6
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Pause/Container"]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Resume"

[node name="Options" type="Button" parent="Pause/Container"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Options"

[node name="Quit" type="Button" parent="Pause/Container"]
anchor_top = 0.76
anchor_right = 1.0
anchor_bottom = 0.76
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Quit"

[node name="MarginContainer" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="Pause/Container/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/Container/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Pause/Container/Quit" to="." method="_on_Quit_pressed"]
